--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
     const statusText = document.getElementById('upload-status');
     const responseContainer = document.getElementById('response-container');
     const progressFill = document.getElementById('progress-fill');
-    const uploadUrl = 'https://3.86.4.233:8000/';
+    const uploadUrl = '/api/';
 
     function setStatus(html, color = "#9ca3af") {
       statusText.innerHTML = html;
