--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
   const responseContainer = document.getElementById('response-container');
   const progressFill = document.getElementById('progress-fill');
 
-  const uploadUrl = 'http://3.86.65.59:8000/predict';
+  const uploadUrl = 'https://3.86.65.59:8000/predict';
 
   function setStatus(html, color = "#9ca3af") {
     statusText.innerHTML = html;
@@ -294,7 +294,7 @@
       </div>
     `;
   }
-  
+
   fileInput.addEventListener('change', () => {
     uploadButton.disabled = !fileInput.files.length;
     responseContainer.textContent = 'Awaiting upload...';
